put entry
